css/style.css
.container {
	/*max-width: 768px;*/
	padding: 0;
}

.search {
	margin: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: #067eb2;
	color: white;
	height: 10vh;
	padding: 10px 15px;
}

@media(max-width: 425px){
	.search{
		flex-direction: column;
		height: auto;
	}

	#search-bar{
		width: 80%;
	}

	.brand{
		margin: 0;
		padding-top: 0;
	}

	.location-container{
		height: 40vh;
	}
}

.location-container{
	background-color: #24C2DA;
	height: 80vh;
	/*background: lime url("../images/clear-sky.jpg") no-repeat fixed center;*/
	background-color: lightblue;
	background-size: cover; 
}

h1{
	padding: 10px 5px;
	font-size: 2rem;
}

input[name="search"] {
	flex-grow: 1;
	max-width: 400px;
	margin-left: 10px;
	padding: 3px 6px;
}

.flexUser{
	position: relative;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-between;
}

.user-location {
	font-size: 1.5rem;
	text-align: center;
	margin-top: 40px;
}

.temp-Unit-button {
	display: flex;
	position: absolute;
	right: 5%;
	top: 40%;
}

@media(min-width: 768px){
	.temp-Unit-button {
		right: 25%;
		top: 40%;
	}
}

.temp-Unit-button label {
	font-size: 18px;
	padding: 2px 6px;
	flex-basis: 40px;
}

label {
	margin:auto;
}

input[name="Unit"] {
	display: none;
}

label[for="degree"] {
	color: blue;
	font-size: 20px;
	border-right: 1px solid black;
}

.temp-container {
	display: flex;
	justify-content: center;
	margin-bottom: 10px;
}

.temperature{
	margin: auto 12px;
	font-size: 2rem;
}

.weather-data {
	display: flex;
	justify-content: center;
	flex-direction: column;
	align-items: center;
}

/****** Footer *************************************************************/
footer .container{
	position: absolute;
	bottom: 0;
	padding: 10px;
	color: white;
	margin: 0;
	background: #28a745;
}

footer p{
	margin: 0;
	padding: 5px;
}

footer a{
	color: white;
	padding: 5px;
}

